--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -6,11 +6,8 @@
 
 <footer class="footer custom-footer">
   <p>
-    <span class="pull-left">© <a href="http://timeoff.management">TimeOff.management</a> 2014-2022</span>
+    <span class="pull-left">Time Off Manager</span>
     <span class="pull-right">
-      <a href="//github.com/timeoff-management/application" target="_blank"><i class="fa fa-github fa-lg"></i></a>
-      <a href="//twitter.com/FreeTimeOffApp" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
-      <a href="mailto:pavlo@timeoff.management"><i class="fa fa-envelope fa-lg"></i></a>
     </span>
   </p>
 </footer>
